<resources>
    <string name="app_name">youtube</string>
    <string name="retry">Try again</string>
    <string name="check">Проверьте подключение к интернету</string>
    <string name="title">title</string>
    <string name="description">description</string>
    <string name="playlist">Playlist</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="please_check_your_internet_connection_and_try_again">Please check your internet connection and try again</string>
    <string name="playlist_name">Playlist_name</string>
    <string name="count">Count</string>
    <string name="Playlist">Playlist</string>
    <string name="text_description">In this series, we break down the impact of displacement, instability, violence, and trauma in children, and offer exercises to support children in their healing journey.</string>
    <string name="text_title">Emotional Well-being Healing Practices for Children</string>
    <string name="text_count">32 video series</string>
    <string name="playlistt">Playlist</string>
</resources>