<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">



    <View
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="-24dp" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="188dp"
        android:layout_marginBottom="224dp"
        android:layout_marginStart="66dp"
        android:layout_marginEnd="66dp"
        android:src="@drawable/image_check"
        tools:ignore="ContentDescription"/>

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="108dp"
        android:layout_marginTop="410dp"
        android:gravity="center"
        android:fontFamily="@font/fjallaone_regular"
        android:layout_marginEnd="108dp"
        android:layout_marginBottom="182dp"
        android:text="@string/no_internet_connection"
        android:textColor="@color/dark_grey"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/subtitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/please_check_your_internet_connection_and_try_again"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="58dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="641dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/red"
        android:fontFamily="@font/notosans_regular"
        android:paddingStart="128dp"
        android:paddingTop="10dp"
        android:paddingEnd="128dp"
        android:paddingBottom="8dp"
        android:text="@string/retry"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16dp" />

</RelativeLayout>