<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.detail.DetailActivity">

    <FrameLayout
        android:id="@+id/frame_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@color/white">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/display_regular"
            android:text="@string/playlistt"
            android:textStyle="bold"
            android:textColor="@color/red"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:background="@color/white"
            android:drawableStart="@drawable/ic_back"
            android:fontFamily="@font/display_regular"
            android:text="Back"
            android:textColor="@color/red"
            android:textSize="16sp" />
    </FrameLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


<com.google.android.material.appbar.AppBarLayout
    android:id="@+id/appbar"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">



    <com.google.android.material.appbar.CollapsingToolbarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_back"
        android:fitsSystemWindows="true"
        app:layout_scrollFlags="scroll"
        >


        <LinearLayout
            android:layout_marginHorizontal="16dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_title"
                android:layout_marginBottom="8dp"
                android:text="@string/text_title"
                android:layout_width="match_parent"
                android:textColor="@color/b"
                android:textSize="24sp"
                android:fontFamily="@font/fjallaone_regular"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_description"
                android:layout_marginBottom="8dp"
                android:textColor="@color/b"
                android:textSize="16dp"
                android:fontFamily="@font/notosans_regular" />


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btn_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:backgroundTint="@color/red"
                android:src="@drawable/ic_start"
                app:layout_scrollFlags="scroll|enterAlways|snap"/>

        </LinearLayout>
    </com.google.android.material.appbar.CollapsingToolbarLayout>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_count_video"
        android:layout_margin="16dp"
        android:text="@string/text_count"
        android:textSize="12sp"
        android:textColor="@color/b"
        android:fontFamily="@font/notosans_regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:fillViewport="true"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerview"
                    tools:listitem="@layout/item_videos"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:indeterminateTint="@color/red"
            android:visibility="gone"
            android:layout_height="wrap_content"/>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</LinearLayout>